@@ -2,7 +2,10 @@ package com.varaneckas.hawkscope.gui.listeners;
 
 import java.awt.event.ActionListener;
 
+import org.eclipse.swt.widgets.Display;
+
 import com.varaneckas.hawkscope.menu.Command;
+import com.varaneckas.hawkscope.util.IconFactory;
 
 /**
  * Exit {@link ActionListener}
@@ -16,6 +19,8 @@ public class ExitCommand implements Command {
 
     @Override
     public void execute() {
+        IconFactory.getIconFactory().cleanup();
+        Display.getDefault().dispose();
         System.exit(0);
     }
 
